--- a/ad.html
+++ b/ad.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+
 	<script async src="https://c.adsco.re" type="text/javascript" onload='AdscoreInit("Qhl-AwAAAAAAWGVuoQC3GEThSLXgosD6O9luv74", {async_callback: 1});'></script>
 </head>
 
