--- a/ad.html
+++ b/ad.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<script async src="https://c.adsco.re" type="text/javascript" onload='AdscoreInit("Qhl-AwAAAAAAWGVuoQC3GEThSLXgosD6O9luv74", { type: 0, async_callback: 0, callback: function(result) { alert("Adscore Verification is completed: " + JSON.stringify(result)); }});'></script>
+	<script async src="https://c.adsco.re" type="text/javascript" onload='AdscoreInit("Qhl-AwAAAAAAWGVuoQC3GEThSLXgosD6O9luv74", { async_callback: 0, callback: function(result) { alert(JSON.stringify(result)); }});'></script>
 </head>
 
 <body>
