--- a/ad.html
+++ b/ad.html
@@ -1,7 +1,19 @@
 <html>
 
 <head>
-	<script async src="https://c.adsco.re" type="text/javascript" onload='AdscoreInit("Qhl-AwAAAAAAWGVuoQC3GEThSLXgosD6O9luv74", { type: 0, async_callback: 1, callback: function(result) { alert(JSON.stringify(result)); }});'></script>
+	<script async src="https://c.adsco.re" type="text/javascript" onload='AdscoreInit("Qhl-AwAAAAAAWGVuoQC3GEThSLXgosD6O9luv74", 
+	 	{ 
+			type: 0, 
+			async_callback: 1, 
+			callback: function(result) { 
+				alert(JSON.stringify(result));
+			}, 
+			debug_callback: function(d) {
+				console.log("debug_callback: " + d);
+				return true;
+			} 
+		});'>
+	</script>
 </head>
 
 <body>
