--- a/ad.html
+++ b/ad.html
@@ -3,13 +3,12 @@
 <head>
 	<script async src="https://c.adsco.re" type="text/javascript" onload='AdscoreInit("Qhl-AwAAAAAAWGVuoQC3GEThSLXgosD6O9luv74", 
 	 	{ 
-			type: 0, 
 			callback: function(result) { 
 				alert(JSON.stringify(result));
 			}, 
 			debug_callback: function(d) {
 				console.log("debug_callback: " + d);
-				return true;
+				return false;
 			} 
 		});'>
 	</script>
