--- a/ad.html
+++ b/ad.html
@@ -113,7 +113,9 @@
 			return info;
 		}
 
-		getFullDeviceInfo().then(console.log).catch(console.error);
+		getFullDeviceInfo().then((info)=>{
+			console.log('info=' + JSON.stringify(info))
+		}).catch(console.error);
 
 	</script>
 </head>
