--- a/ad.html
+++ b/ad.html
@@ -137,26 +137,24 @@
 </head>
 
 <body>
-	<!-- <p style="width: 100vm; height: 100vh; text-align: center; line-height: 100vh;">测试广告内容</p> -->
+	<p style="width: 100vm; height: 100vh; text-align: center; line-height: 100vh;">测试广告内容</p>
 
-	<button id="start" style="width: 300px; height: 300px">start</button>
+	<button id="start" style="width: 200px; height: 200px">start</button>
 
 	<script>
-
 		const startBtn = document.getElementById('start');
 		startBtn.addEventListener('click', () => {
 			window.addEventListener("deviceorientation", function (d) {
-				console.log('deviceorientation=' + d.alpha + '-' + d.beta + '-' + d.gamma)
+				window.removeEventListener(this)
+				console.log('deviceorientation=' + JSON.stringify(d))
 			})
 
 			window.addEventListener("devicemotion", function (d) {
+				window.removeEventListener(this)
 				var acc = d.accelerationIncludingGravity
-				console.log('acc=' + acc)
-				console.log('devicemotion=' + acc.x + '-' + acc.y + '-' + acc.z + '-' + d.interval)
+				console.log('devicemotion=' + JSON.stringify(d))
 			})
 		});
-
-
 	</script>
 </body>
 
