--- a/ad.html
+++ b/ad.html
@@ -137,9 +137,9 @@
 </head>
 
 <body>
-	<p style="width: 100vm; height: 100vh; text-align: center; line-height: 100vh;">测试广告内容</p>
+	<button id="start" style="width: 200px; height: 200px;">start</button>
 
-	<button id="start" style="width: 200px; height: 200px; align-items: start;">start</button>
+	<p style="width: 100vm; height: 100vh; text-align: center; line-height: 100vh;">测试广告内容</p>
 
 	<script>
 		const startBtn = document.getElementById('start');
