--- a/test_browse_finger.html
+++ b/test_browse_finger.html
@@ -346,7 +346,8 @@
         timezone: getTimeZone(),
         localStorage: testStorage("localStorage"),
         sessionStorage: testStorage("sessionStorage"),
-        pluginsLength: (nav.plugins && nav.plugins.length) || 0
+        pluginsLength: (nav.plugins && nav.plugins.length) || 0,
+        cpuClass:nav.cpuClass
       };
 
       const [
