Handle undefined cpuClass in test_browse_finger.html

--- a/test_browse_finger.html
+++ b/test_browse_finger.html
@@ -347,7 +347,7 @@
         localStorage: testStorage("localStorage"),
         sessionStorage: testStorage("sessionStorage"),
         pluginsLength: (nav.plugins && nav.plugins.length) || 0,
-        cpuClass:nav.cpuClass
+        cpuClass:nav.cpuClass || ""
       };
 
       const [
